<resources>
    <string name="app_name">MedRad</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile\n</string>
    <string name="rend">Rendez-vous</string>
    <string name="doctor_title"></string>
    <string name="slogan_1">Changer la façon dont vous recevez des soins\n de santé avec l\'excellence médicale.</string>
    <string name="med_deta">Inscription d\'un médecin professionnel médical pour une consultation médicale en ligne</string>
    <string name="search_placeholder_text">Rechercher un docteur</string>
    <string name="txt_lorem2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia, molestiae quas vel sint commodi repudiandae consequuntur voluptatumLorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia, molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum numquam blanditiis harum quisquam eius sed odit fugiat iusto fuga praesentium optio, eaque rerum!</string>
    <string name="descrip">Je suis médecin chirurgien spécialisé dans la chirurgie orthopédique. Avec une vaste expérience dans le domaine, je traite les blessures et les maladies affectant les os, les articulations, les muscles et les tendons. Mon objectif est de soulager la douleur et d\'améliorer la mobilité de mes patients grâce à des techniques chirurgicales avancées et à des soins post-opératoires attentifs. J\'apporte une approche personnalisée à chaque cas pour obtenir les meilleurs résultats possibles.</string>
    <string name="about">Apropos de l\'application</string>
    <string name="rem">Remerciement</string>
    <string name="save_txt">Enregistrer</string>
    <string name="my_name">Babi Mumba</string>

    <string name="fuction">Developpeur Mobile</string>
    <string name="about_me">Je suis passionné par les nouvelles technologies et la programmation Informatique en particulier  <b>la programmation Android</b>.\nJe suis un étudiant de 2eme année à l\’école supérieure d\’informatique salama</string>
    <string name="code"><b>MedRad</b> est un projet open source passionnant qui encourage les contributions de la communauté. Son code source est disponible sur GitHub, où vous pouvez y accéder et contribuer au développement de l\'application. N\'hésitez pas à visiter le dépôt GitHub de <b>MedRad</b> pour explorer le code, soumettre des problèmes, proposer des améliorations ou même soumettre des pull requests. Votre expertise et votre enthousiasme sont les bienvenus pour faire progresser cette application.\nJ\'ai travaillé dur pour créer une interface conviviale et attrayante, en fournissant des fonctionnalités qui faciliteront la vie de ses utilisateurs\n Cette application est le fruit de mes efforts travaillé pendant 2 semaines et représente ma réalisation en tant qu\'étudiant \n\nN\'hésitez pas à tester MedRad lors de l\'événement SoftDay et découvrez comment cette application peut faciliter votre processus de prise de rendez-vous médicaux.</string>
    <string name="dev_source"><![CDATA[Developpeur & code source]]></string>
    <string name="aboute_app"><b>MedRad</b> a été spécialement créée pour l\'événement <b>SoftDay</b>, organisé par le club <b>Espacesis</b>. <b>MedRad</b> est une application de prise de rendez-vous avec le médecin, conçue pour faciliter le processus de planification des consultations médicales.\n\nAvec <b>MedRad</b>, les utilisateurs peuvent rapidement et facilement trouver des médecins disponibles dans leur région, prendre rendez-vous en ligne et gérer leur calendrier de consultations. L\'application offre une interface conviviale et intuitive, permettant aux utilisateurs de rechercher des spécialités médicales spécifiques et de trouver des créneaux horaires adaptés à leur disponibilité.\n\nMedRad présente une solution pratique pour aider les utilisateurs à organiser et gérer leurs rendez-vous médicaux de manière efficace. L\'application utilise les technologies les plus récentes pour garantir une expérience fluide et sécurisée.\n\nAvec son design attrayant et ses fonctionnalités pratiques, MedRad est prêt à être présenté lors de l\'événement \"SoftDay\" parmi les autres réalisations des étudiants. Cette application vise à simplifier la vie des utilisateurs en leur offrant une solution pratique pour gérer leur santé et leurs rendez-vous médicaux.</string>
    <string name="thank">\n\nJe tenais à prendre un moment pour exprimer ma profonde gratitude pour avoir été sélectionné en tant que participant à l\'événement <b>SoftDay</b>. C\'est avec enthousiasme et fierté que je présenterai mon projet d\'application mobile lors de cette occasion.\n\nTout d\'abord, je voudrais adresser mes sincères remerciements au <b>membre du jury</b>. Votre expertise et vos compétences sont inestimables, et je suis reconnaissant d\'avoir l\'opportunité de bénéficier de vos précieux commentaires et évaluations. Votre contribution sera d\'une grande valeur pour moi et m\'aidera à améliorer mon projet.\n\nEnsuite, je souhaite exprimer ma gratitude envers le club <b>EspacEsis</b>. C\'est grâce à votre dévouement et à votre travail acharné que cet événement a pu voir le jour. Je suis honoré d\'avoir été sélectionné parmi tous les autres projets et je suis conscient de l\'effort collectif fourni par le club pour rendre cette occasion possible. Votre soutien et votre encouragement sont d\'une importance capitale pour moi.\n\nJe suis impatient de présenter mon projet devant vous tous et d\'échanger avec vous lors de l\'événement <b>SoftDay</b>. Je suis reconnaissant envers chacun d\'entre vous pour cette opportunité unique qui me permettra de partager mes réalisations avec la communauté.\n\nEncore une fois, merci du fond du cœur pour votre confiance et votre soutien. Je suis honoré d\'être membre de cet événement et je suis certain que cela marquera une étape importante dans mon parcours.</string>


    <string-array name="langue">
        <item>Francais</item>
        <item>Englais</item>
        <item>Swahili</item>
    </string-array>

    <string-array name="specialites">
        <item>Selectionnez ici</item>
        <item>Dentiste</item>
        <item>Cardiologue</item>
        <item>Oncologue</item>
        <item>Ophtalmologiste</item>
        <item>Chirurgien</item>
        <item>Gynécologue</item>
        <item>Psychiatre</item>
        <item>Orthopédiste</item>
        <item>Neurologue</item>
        <item>Pédiatre</item>
        <item>Urologue</item>
        <item>Endocrinologue</item>
        <item>Rhumatologue</item>
        <item>Pneumologue</item>
        <item>ORL</item>
    </string-array>


</resources>